# radar-core

./: Cargo.toml
.github/workflows/: rust.yml
src/: async.rs  cal.rs  calculate.rs  common.rs  http.rs  lib.rs  main.rs  srv.rs
src/cal/: config.rs  detect.rs  pnp.rs
src/calculate/: calib.rs  daemon.rs  detect.rs  pnp.rs  tools.rs
src/common/: config.rs  image.rs  mod.rs
src/device/: camera.rs
src/device/camera/: fs.rs  source.rs
src/http/: rtmp.rs
src/share/: event.rs
src/srv/: http.rs  ws.rs
