[package]
name = "radar-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.6", features = ["serde", "matrixmultiply-threading"] }
opencv = { version = "0.88.8", features = ["imgproc"] }
anyhow = "1.0.79"
tokio = "1.35.1"
config = { version = "0.13.4", features = ["toml"] }