[package]
name = "radar-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.6", features = ["serde", "matrixmultiply-threading"] }
opencv = { version = "0.88.8", features = ["imgproc"] }
anyhow = "1.0.79"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
config = { version = "0.13.4", features = ["toml"] }
serde = "1.0.196"
log = "0.4.20"
serde_json = "1.0.113"
toml = "0.5.11"
env_logger = "0.11.1"
axum = { version = "0.7.4", features = ["ws"] }
bytes = "1.5.0"
serde_bytes = "0.11.14"
axum-macros = "0.4.1"
tower-http = { version = "0.5.1", features = ["cors"] }
chrono = "0.4.33"
tokio-stream = { version = "0.1.14", features = ["sync"] }
async-stream = "0.3.5"
futures = "0.3.30"
